longer using rt.cpan.org for bug tracking.  They are now being
tracked via Google Code at
http://code.google.com/p/www-mechanize/issues/list

Mech now has its own mailing list at Google Groups:
http://groups.google.com/group/www-mechanize-users

NEXT
========================================
[FIXED]
Fixed a declaration in the Movable Type example in
WWW::Mechanize::Examples.

1.62
========================================
[FIXED]
$mech->follow_link() no longer dies with an inappropriate error if
the link is not found.

$mech->click_button() now checks to see if a form is selected.

[DOCUMENTATION]
More additions to the FAQ.


1.60        Mon Aug 17 00:41:39 CDT 2009
========================================
No new features.  Exists only to skip tests that always fail on
Windows.

Fixed up some minor documentation problems.


1.58        Mon Jul 13 22:32:23 CDT 2009
========================================
No new features.  If you have 1.56 installed OK, you do NOT need
to install 1.58.

[FIXES]
Removed prereq of HTTP::Response::Encoding, even though it was never
used.  Thanks for the catch, Gisle.



1.56        Thu Jul  9 00:36:54 CDT 2009
========================================
[THINGS THAT MAY BREAK YOUR CODE]
For a while, Mech used HTTP::Response::Encoding to try to suss out
the proper encoding of the page it receives.  Now, it lets
LWP::UserAgent do the work, and no longer requires
HTTP::Response::Encoding.

[ENHANCEMENTS]
Added a new dump_headers() method to dump the HTTP response headers.

Added --headers flag to mech-dump to dump the HTTP response headers.

[FIXES]
Now requires LWP version 5.829 because HTTP::Response has memory
cycle bugs.

[DOCUMENTATION]
Added a few notes to the FAQ, and fixed some incorrect docs.


1.55_01     Mon Jul  6 12:17:10 CDT 2009
========================================
This is mostly a bug fix release.  There will be a number of other
bug fix releases in the next few days.

[FIXED]