@@ -60,6 +60,7 @@ t/select.t
 t/taint.t
 t/tick.html
 t/tick.t
+t/untaint.t
 t/upload.html
 t/upload.t
 t/warn.t
